--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,16 +721,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x162209670>"
+       "<matplotlib.image.AxesImage at 0x16e2479d0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,16 +778,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x165bc5760>"
+       "<matplotlib.image.AxesImage at 0x28a2c98b0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,22 +848,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Adjoint test for blur operator failed. The error is 0.001953",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_blur\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtest_blur\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1e-3\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:69\u001b[0m, in \u001b[0;36mtest_blur\u001b[0;34m(x, b, thresh)\u001b[0m\n\u001b[1;32m     67\u001b[0m x, b \u001b[39m=\u001b[39m torch_arranger(x,b)\n\u001b[1;32m     68\u001b[0m error \u001b[39m=\u001b[39m \u001b[39mabs\u001b[39m(torch\u001b[39m.\u001b[39mmatmul(blur_operator_torch(x),b) \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mmatmul(x, blur_adjoint_torch(b)))\n\u001b[0;32m---> 69\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for blur operator failed. The error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for blur operator failed. The error is 0.001953"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from operator_tests import test_blur\n",
     "test_blur(rand_1,rand_2,1e-3)"
@@ -908,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1174,13 +1161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from operators import evals_blur, fspecial, blur_adjoint_torch\n",
     "L = evals_blur(fspecial((9,9),4))[0]*2\n",
-    "Linv = 1/L # Way pessimistic\n",
+    "Linv = 1/L # Way pessimistic. Implement the smoothness condition that is in Alex Hsu's notes.\n",
     "k_SR3 = 0\n",
     "max_iter = 200\n",
     "# max_iter = 1200\n",
@@ -1197,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
